--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,6 @@
           <scope>compile</scope>
       </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>RELEASE</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.11</version>
@@ -52,9 +46,11 @@
       <artifactId>spring-context</artifactId>
       <version>5.0.8.RELEASE</version>
     </dependency>
-
-
-
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.6</version>
+    </dependency>
   </dependencies>
 
   <build>
